--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   <br />
                   <div>
                     <h5 class="fs-8 fw-bold lh-lg mb-1">Usage Forecasting</h5>
-                    <p class="lh-xl mb-0">Predict future resource needs using AI-powered forecasting to proactively
+                    <p class="lh-xl mb-0">Predict future resource needs using our custom forecasting algorithms to proactively
                       scale resources before demand spikes.</p>
                   </div>
                 </div>
@@ -233,7 +233,9 @@
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-10">
                     <h2 class="fs-4 fs-lg-3 fw-bold text-center mb-2 lh-sm">Contact Us</h2>
-                    <p class="fs-8 mb-5 mb-lg-6 text-center lh-lg fw-normal">This project is currently in Preview. Get in touch to get access to it.</p>
+                    <p style="margin-bottom: 10px !important;" class="fs-8 mb-5 mb-lg-6 text-center lh-lg fw-normal">This project is currently in Preview. Get in touch to get access to it.</p>
+                    <h3 style="text-align: center;">To see what this project can do for you, read the docs <a style="color:orange;" href="https://github.com/david-garcia-garcia/azureautoscalerapp">here</a></h3>
+                    <br />
                   </div>
                   <div class="col-10 col-lg-7">
                     <form action="https://formspree.io/f/moqgpjke" method="POST">
