--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-lg-6 position-lg-relative">
                   <div class="position-lg-absolute z-1 text-center">
-                    <img class="img-fluid chat-image" src="assets/img/Hero/Frame.png"
+                    <img class="img-fluid chat-image" src="assets/img/Hero/frame.png"
                       alt="Azure Autoscaler Dashboard" />
                     <div class="position-absolute dots d-none d-md-block">
                       <img class="img-fluid w-50 w-lg-75" src="assets/img/illustrations/Dots.webp" alt="" />
