--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     gtag('config', 'G-7RPDQG2Y7Y');
   </script>
 
+  <script 
+  src="https://www.paypal.com/sdk/js?client-id=BAAWrTHlRByFj4h9ML7M7JASrE-JZIH0MYmMZeUEhREdtGr39JyShmv8cSKjnKyKBwaHtdLWuKUdUxxnBE&components=hosted-buttons&disable-funding=venmo&currency=EUR">
+  </script>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- ===============================================--><!--    Document Title--><!-- ===============================================-->
-  <title>Azure Autoscaler - Intelligent Cloud Resource Scaling</title>
+  <title>Azure Autoscaler - Automatic Cloud Resource Scaling</title>
 
   <!-- ===============================================--><!--    Favicons--><!-- ===============================================-->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -75,7 +79,7 @@
             <div class="container">
               <div class="row gy-4 gy-md-8 pt-9 pt-lg-0">
                 <div class="col-lg-6 text-center text-lg-start">
-                  <h1 class="fs-2 fs-lg-1 text-white fw-bold mb-2 mb-lg-x1 lh-base mt-3 mt-lg-0">Intelligent Azure
+                  <h1 class="fs-2 fs-lg-1 text-white fw-bold mb-2 mb-lg-x1 lh-base mt-3 mt-lg-0">Automatic Azure
                     Resource Scaling</h1>
                   <div style="z-index:25 !important;" class="d-flex justify-content-center justify-content-lg-start">
                     <a href="#contact" class="btn btn-primary btn-lg lh-xl mb-4 mb-md-5 mb-lg-7">Get Started Today</a>
@@ -89,7 +93,7 @@
                     <img class="img-fluid chat-image" src="assets/img/Hero/frame.png"
                       alt="Azure Autoscaler Dashboard" />
                     <div class="position-absolute dots d-none d-md-block">
-                      <img class="img-fluid w-50 w-lg-75" src="assets/img/illustrations/Dots.webp" alt="" />
+                      
                     </div>
                   </div>
                 </div>
@@ -226,6 +230,52 @@
           </div>
         </section>
 
+
+
+        <section class="container mb-8 mb-lg-11" id="how-it-works">
+          <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-7">
+              <h3 class="fs-4 fs-lg-3 fw-bold text-center mb-2 mb-lg-x1">Buy</h3>
+              <p class="fs-8 mb-7 mb-lg-8 text-center lh-lg">Use the contact us form if you have any questions or feedback</p>
+            </div>
+            <div class="col-12">
+              <div style="display:flex; align-items:flex-start !important;"
+                class="row g-sm-2 g-lg-3 align-items-center timeline">
+                <div
+                  class="col-12 col-lg-4 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
+                  <div id="paypal-container-UD6YFS57G744W"></div>
+                  <script>
+                    paypal.HostedButtons({
+                      hostedButtonId: "UD6YFS57G744W",
+                    }).render("#paypal-container-UD6YFS57G744W")
+                  </script>
+
+                </div>
+                <div
+                  class="col-12 col-lg-4 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
+                  <div id="paypal-container-X3HTP5SGM5NDW"></div>
+                  <script>
+                    paypal.HostedButtons({
+                      hostedButtonId: "X3HTP5SGM5NDW",
+                    }).render("#paypal-container-X3HTP5SGM5NDW")
+                  </script>
+                </div>
+                <div
+                  class="col-12 col-lg-4 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
+                  <div id="paypal-container-LD6NCD9NM5JTN"></div>
+                  <script>
+                    paypal.HostedButtons({
+                      hostedButtonId: "LD6NCD9NM5JTN",
+                    }).render("#paypal-container-LD6NCD9NM5JTN")
+                  </script>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        
+
         <section class="bg-300 position-relative z-0" id="contact">
           <div class="container py-8 py-lg-9">
             <div class="row justify-content-center">
@@ -233,7 +283,7 @@
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-10">
                     <h2 class="fs-4 fs-lg-3 fw-bold text-center mb-2 lh-sm">Contact Us</h2>
-                    <p style="margin-bottom: 10px !important;" class="fs-8 mb-5 mb-lg-6 text-center lh-lg fw-normal">This project is currently in Preview. Get in touch to get access to it.</p>
+                    <p style="margin-bottom: 10px !important;" class="fs-8 mb-5 mb-lg-6 text-center lh-lg fw-normal">Get in touch if you have any questions or feedback.</p>
                     <h3 style="text-align: center;">To see what this project can do for you, read the docs <a style="color:orange;" href="https://github.com/david-garcia-garcia/azureautoscalerapp">here</a></h3>
                     <br />
                   </div>
