--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html data-bs-theme="light" lang="en-US" dir="ltr">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7RPDQG2Y7Y"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-7RPDQG2Y7Y');
-  </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R9QSEZ3HMM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R9QSEZ3HMM');
+</script>
 
   <script 
   src="https://www.paypal.com/sdk/js?client-id=BAAWrTHlRByFj4h9ML7M7JASrE-JZIH0MYmMZeUEhREdtGr39JyShmv8cSKjnKyKBwaHtdLWuKUdUxxnBE&components=hosted-buttons&disable-funding=venmo&currency=EUR">
@@ -240,28 +241,18 @@
             </div>
             <div class="col-12">
               <div style="display:flex; align-items:flex-start !important;"
-                class="row g-sm-2 g-lg-3 align-items-center timeline">
+                class="row g-sm-2 g-lg-2 align-items-center timeline">
                 <div
-                  class="col-12 col-lg-4 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
-                  <div id="paypal-container-UD6YFS57G744W"></div>
+                  class="col-12 col-lg-6 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
+                  <div id="paypal-container-9XVH4588VMR5Q"></div>
                   <script>
                     paypal.HostedButtons({
-                      hostedButtonId: "UD6YFS57G744W",
-                    }).render("#paypal-container-UD6YFS57G744W")
-                  </script>
-
-                </div>
-                <div
-                  class="col-12 col-lg-4 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
-                  <div id="paypal-container-X3HTP5SGM5NDW"></div>
-                  <script>
-                    paypal.HostedButtons({
-                      hostedButtonId: "X3HTP5SGM5NDW",
-                    }).render("#paypal-container-X3HTP5SGM5NDW")
+                      hostedButtonId: "9XVH4588VMR5Q",
+                    }).render("#paypal-container-9XVH4588VMR5Q")
                   </script>
                 </div>
                 <div
-                  class="col-12 col-lg-4 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
+                  class="col-12 col-lg-6 d-flex flex-row flex-lg-column justify-content-center gap-2 gap-sm-x1 gap-md-4 gap-lg-0">
                   <div id="paypal-container-LD6NCD9NM5JTN"></div>
                   <script>
                     paypal.HostedButtons({
